Lua Jass shimming (#1183)
Tries to emulate Jass behavior in emitted Lua code.